fix: fix gap between buttons

--- a/src/app/document/component/add-delete-edit-document-dialogs/edit-document-dialog/edit-document-dialog.component.css
+++ b/src/app/document/component/add-delete-edit-document-dialogs/edit-document-dialog/edit-document-dialog.component.css
@@ -27,7 +27,6 @@
 .primary-button {
     background-color: #3C5A64; /* Customize this color as needed */
     color: white;
-    margin: 5px;
 }
 
 .secondary-button {
